force-app/main/default/objects/hed__Term__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>This display order from CPS - used to show terms in proper order.</description>
    <inlineHelpText>This display order from CPS - used to show terms in proper order.</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>