force-app/main/default/objects/hed__Term__c/fields/Empty_Sections__c.field-meta.xml
<CustomField>
    <fullName>Empty_Sections__c</fullName>
    <description>Number of empty sections in term.</description>
    <inlineHelpText>Number of empty sections in term.</inlineHelpText>
    <label>Empty Sections</label>
    <summaryFilterItems>
        <field>hed__Course_Offering__c.Confirmed_Enrollments__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>hed__Course_Offering__c.hed__Term__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>