force-app/main/default/objects/hed__Term__c/fields/Is_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is exposed / searchable online.</description>
    <inlineHelpText>Is exposed / searchable online.</inlineHelpText>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>