force-app/main/default/objects/hed__Term__c/fields/lms_hed__LMS_Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>lms_hed__LMS_Reference_Code__c</fullName>
    <description>A reference code for a term - uniquely identifies it. e.g. Spring 2023 -&gt; 2023SP.</description>
    <externalId>true</externalId>
    <inlineHelpText>A reference code for a term - uniquely identifies it. e.g. Spring 2023 -&gt; 2023SP.</inlineHelpText>
    <label>LMS Reference Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>