force-app/main/default/objects/hed__Term__c/fields/Programming_Active__c.field-meta.xml
<CustomField>
    <fullName>Programming_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Term is currently being programmed.</description>
    <inlineHelpText>Term is currently being programmed.</inlineHelpText>
    <label>Programming Active</label>
    <type>Checkbox</type>
</CustomField>