force-app/main/default/objects/hed__Term__c/fields/Sections_in_Term__c.field-meta.xml
<CustomField>
    <fullName>Sections_in_Term__c</fullName>
    <description>Count of all sections in term.</description>
    <inlineHelpText>Count of all sections in term.</inlineHelpText>
    <label>Sections in Term</label>
    <summaryForeignKey>hed__Course_Offering__c.hed__Term__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>