force-app/main/default/objects/hed__Term__c/fields/Show_on_Appeals_Form__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Appeals_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, appears on Appeals forms via Form Assembly.</description>
    <inlineHelpText>If true, appears on Appeals forms via Form Assembly.</inlineHelpText>
    <label>Show on Appeals Form</label>
    <type>Checkbox</type>
</CustomField>