force-app/main/default/objects/hed__Term__c/recordTypes/Credit.recordType-meta.xml
<RecordType>
    <fullName>Credit</fullName>
    <active>true</active>
    <description>Academic Credit Term</description>
    <label>Credit</label>
</RecordType>